compiler-core/src/go/tests/snapshots/gleam_core__go__tests__todo__as_expression.snap
---
source: compiler-core/src/go/tests/todo.rs
expression: "\nfn go(f) {\n  let boop = todo as \"I should do this\"\n  f(todo as \"Boom\")\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go(f) {
  let boop = todo as "I should do this"
  f(todo as "Boom")
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ[M gleam_P.Type[M], N gleam_P.Type[N]](f gleam_P.Func1_t[N, M]) M {
  var boop gleam_P.Type = (func() gleam_P.Type {
    panic(gleam_P.MakeError(
      "todo",
      "my/mod",
      3,
      "go",
      "I should do this",
      map[string]any{},
    ))
  })()
  _ = boop
  return f(
    (func() N {
      panic(gleam_P.MakeError(
        "todo",
        "my/mod",
        4,
        "go",
        "Boom",
        map[string]any{},
      ))
    })(),
  )
}
