compiler-core/src/go/tests/snapshots/gleam_core__go__tests__todo__with_message_expr.snap
---
source: compiler-core/src/go/tests/todo.rs
expression: "\nfn go() {\n  let x = \"I should \" <> \"do this\"\n  todo as x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  let x = "I should " <> "do this"
  todo as x
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ[J gleam_P.Type[J]]() J {
  var x gleam_P.String_t = "I should " + "do this"
  _ = x
  panic(gleam_P.MakeError("todo", "my/mod", 4, "go", x, map[string]any{}))
}
