compiler-core/src/go/tests/snapshots/gleam_core__go__tests__todo__without_message.snap
---
source: compiler-core/src/go/tests/todo.rs
expression: "\nfn go() {\n    todo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
    todo
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ[J gleam_P.Type[J]]() J {
  panic(gleam_P.MakeError(
    "todo",
    "my/mod",
    3,
    "go",
    "`todo` expression evaluated. This code has not yet been implemented.",
    map[string]any{},
  ))
}
